# robotics-ci-cd

./: .bazelrc  .gitignore  CMakeLists.txt  MODULE.bazel  README.md  pyproject.toml  setup.py  test_ci_workflow.sh  test_workflow.sh
.github/workflows/: ci.yml  release.yml
apps/: BUILD.bazel  CMakeLists.txt
apps/my_app/: BUILD.bazel  CMakeLists.txt  main.cpp
include/my_robot_project/: BUILD.bazel  kinematics.hpp
models/arm/: arm.xml
python/: BUILD.bazel  CMakeLists.txt
python/src/: bindings.cpp
python/src/my_robot_py/: BUILD.bazel  __init__.py
src/: CMakeLists.txt
src/kinematics/: BUILD.bazel  CMakeLists.txt  kinematics.cpp
tests/: CMakeLists.txt
tests/cpp/: BUILD.bazel  CMakeLists.txt  test_kinematics.cpp
tests/python/: BUILD.bazel  test_bindings.py
