module(
    name = "my_robot_project",
    version = "1.0.0",
)


bazel_dep(name = "rules_cc", version = "0.1.1")
bazel_dep(name = "rules_python", version = "1.5.3")
bazel_dep(name = "platforms", version = "0.0.11")
bazel_dep(name = "pybind11_bazel", version = "2.13.6")

pybind11 = use_extension(
    "@pybind11_bazel//:bzlmod.bzl",
    "pybind11",
)
use_repo(pybind11, "pybind11")


python = use_extension("@rules_python//python:extensions.bzl", "python")
python.toolchain(
    name = "python_3_10",
    python_version = "3.10",
)
use_repo(python, "python_3_10")

bazel_dep(name = "caseyduquettesc_rules_python_pytest", version = "1.1.0", repo_name = "rules_python_pytest")

bazel_dep(name = "googletest", version = "1.17.0", repo_name = "com_google_googletest")
