[build-system]
requires = ["scikit-build-core>=0.7.0", "pybind11"]
build-backend = "scikit_build_core.build"

[project]
name = "my_robot_py"
version = "1.0.0"
description = "Python bindings for the MyRobotProject C++ library"
readme = "README.md"
requires-python = ">=3.8"
license = { file = "LICENSE" }
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

[tool.scikit-build]
# Point scikit-build-core to the root CMakeLists.txt
cmake.source-dir = "."
# Explicitly list the Python package directory.
wheel.packages = ["python/src/my_robot_py"]
# Tell scikit-build-core where to install the Python module from the
# CMake build directory. The path is relative to the CMake install prefix.
wheel.install-dir = "my_robot_py"
